# crypto

./: .gitignore  Cargo.toml  DEFERRED.md  P256_PROPERTIES.md  PAPER_STRUCTURAL_COMPLETENESS.md  PHASE10_VULNERABILITY_CLASSIFICATION.md  PRIMER_ELLIPTIC_CURVES.md  README.md  RESEARCH_AUTOLAB_LOG.md  RESEARCH_DIEM_DESCENT.md  RESEARCH_ECDLP_STATE_OF_THE_ART.md  RESEARCH_EDS_RESIDUE.md  RESEARCH_FFD_MEASUREMENT.md  RESEARCH_FFD_PROOF_COMPLEXITY.md  RESEARCH_FFD_WORKFLOW.md  RESEARCH_GLV_HNP.md  RESEARCH_GLV_HNP_PHASE2.md  RESEARCH_GROEBNER_F4.md  RESEARCH_HIGHER_SEMAEV.md  RESEARCH_HNP_LANDSCAPE.md  RESEARCH_INDEX_CALCULUS_FACTOR_BASE.md  RESEARCH_LLL_GS_ANALYSIS.md  RESEARCH_MESTRE_HOWE.md  RESEARCH_NIST_SOLINAS_EXPERIMENTS.md  RESEARCH_NIST_SOLINAS_STRUCTURE.md  RESEARCH_P256.md  RESEARCH_P256_ISOGENY_COVER.md  RESEARCH_PKM_CRITERION.md  RESEARCH_SAT_SEMAEV.md  RESEARCH_SECP256K1_CM.md  RESEARCH_SYMMETRIZED_SEMAEV.md  RESEARCH_VOLCANO_FLOOR_RHO.md  SECURITY.md  cl_o_horizontal_output.txt  ecc_attack_chart.html  igusa_clebsch_verification_output.txt  p224_real_attack.py
aes_neural_distinguisher/: model.py
cd_attack/: Cargo.toml  SUMMARY.md  THEORY.md
csidh_toy/: Cargo.toml
docs/: ECDLP_ATTACK_MATRIX.md  ECDLP_CALIBRATION_PRIMES.md  RESEARCH_BENCH_LOG.md  sha1_fpga_cost_model.md
examples/: diem_descent_demo.rs  dual_ec_drbg_demo.py  dual_ec_drbg_demo.rs  dual_ec_drbg_demo.sage  eccp79_rho.rs  ecdlp_bsgs_gs_variants.rs  eds_bridge.rs  eds_census.rs  eds_localisation.rs  eds_mov_demo.rs  eds_net_demo.rs  eds_residue_demo.rs  eds_tate_demo.rs  ffd_breakthrough_loop.rs  ffd_defect_scaling.rs  ffd_expg_curve.rs  ffd_genericity.rs  ffd_sweep_demo.rs  ffd_syzygy.rs  ghs_attack_demo.rs  legacy_curve_attack_demo.rs  md5_chosen_prefix_demo.rs  pc_degree_avg_demo.rs  pc_degree_demo.rs  pkm_audit_demo.rs  semaev_higher_demo.rs  type_inference.py
experiments/: 01_secp256k1.txt  02_volcano_toy-a_2.txt  03_volcano_toy-j0_3.txt  04_graph_toy-a_2-3.txt  05_cm_disc-23.txt  06_experiment_14bit_10trials.json  06_experiment_16bit_10trials.json  06b_experiment_14bit_10trials_HIGH_CAP.json  06c_14bit_FIX.json  06c_16bit_FIX.json  06c_18bit_FIX.json  07_experiment_18bit_10trials.json  08_18bit_SEA.json  11_22bit.json  13_22bit_dpoly.json  14b_30bit.json  15_40bit.json  15b_40bit.json  16_50bit.json  16c_50bit.json  17_18bit_radding.json  17_22bit_radding.json  17_30bit_radding.json  17_40bit_radding.json  18_30bit_dp.json  18_40bit_dp.json  18_50bit_dp.json  18_60bit_dp.json  19_22bit_phgls.json  19_30bit_phgls.json  ANALYSIS.md  ffd_defect_scaling.json  ffd_expg_curve.json  ffd_genericity.json  ffd_loop_latest.json  ffd_syzygy.json  pooled_vertex_data.csv
ghs-c2pnb/: ghs_poc.py
paper/: .gitignore  AUTHORS.example  Makefile  README.md  SUBMISSION_CHECKLIST.md  abstract.txt  lll_degeneracy_note.tex  structural_completeness.tex
quantum_circuit_secp256k1/: 2026-06-03-active-iterations-395-island.md  README.md  fastcheck.rs  iters395-island.patch
research/gbrl/: .gitignore  Cargo.toml  PAPER.md
research/gbrl/py/: baseline.py  check_init.py  compare.py  compare_normal.py  env.py  eval.py  eval_heldout.py  imitate.py  model.py  multi_seed_diverse.py  multi_seed_eval.py  multi_seed_semaev.py  stress_server.py  sweep_cyc6.py  train.py  train_reinforce.py
research/gbrl/src/: buchberger.rs  curve.rs  env.rs  f4.rs  field.rs  lib.rs  monomial.rs  pair.rs  poly.rs  reduce.rs  resultant.rs  semaev.rs  spoly.rs  strategy.rs
sage/: README.md  sm2.sage
secp256k1_cm_audit/: audit.gp  audit_output.expected.txt  check_traces.gp  chlrs_correct_formula.gp  chlrs_cubic_residue_check.gp  chlrs_diagnosis.gp  chlrs_flat_check.gp  chlrs_fp3_rosenhain.gp  chlrs_igusa_formula.gp  chlrs_minimal.gp  chlrs_rosenhain_diagnostic.gp  chlrs_sextic.gp  chlrs_valid_toy.gp  cl_o_horizontal.gp  cl_o_horizontal_output.txt  cover_complexity.gp  generate_cm_curve.gp  (+179 more)
(+514 files in other folders)
