[package]
name = "crypto"
version = "0.1.0"
edition = "2021"
description = "Educational comprehensive cryptography library: ECC, RSA, AES, ChaCha20, SHA, KDF, PQC"

[[bin]]
name = "crypto"
path = "src/main.rs"

[lib]
name = "crypto_lib"
path = "src/lib.rs"

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num-integer = "0.1"
rand = "0.8"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# BLAKE3 is kept as a crate: its Merkle-tree construction is too complex to
# reimplement educationally without obscuring the learning goal.
blake3 = "1.5"
