[package]
name = "crypto"
version = "0.1.0"
edition = "2021"
description = "Educational comprehensive cryptography library: ECC, RSA, AES, ChaCha20, SHA, KDF, PQC"

[[bin]]
name = "crypto"
path = "src/main.rs"

[lib]
name = "crypto_lib"
path = "src/lib.rs"

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
num-integer = "0.1"
rand = "0.8"
# OS-backed CSPRNG (getrandom(2) on Linux, BCryptGenRandom on Windows, etc.).
getrandom = "0.2"
# Constant-time equality for MAC/tag verification. Public-domain.
subtle = "2.5"
# Zeroize secret material on drop. Best-effort: cannot zeroize internal
# heap allocations of num-bigint, but covers byte buffers and re-assigns
# BigUint fields to zero on drop.
zeroize = { version = "1.7", features = ["zeroize_derive"] }
hex = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# BLAKE3 is kept as a crate: its Merkle-tree construction is too complex to
# reimplement educationally without obscuring the learning goal.
blake3 = "1.5"
